Mon Dec 15 18:51:15 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* bin/MakeProjectCreator/templates/gnu.mpd:
	  Added setting of CLEANUP_INSTALL, this has the result that an exe
	  that is installed into a different directory is also removed when
	  doing a clean. Thanks to Don and Chad for validing this.

Mon Dec 15 11:09:45 2003  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* tests/Proactor_Test.cpp (ACE_MT_SYNCH>): 
	* ace/POSIX_CB_Proactor.cpp (ACE_POSIX_CB_Proactor): Added a 
	  cast to (unsigned int) so things will work properly for the
 	  ACE_Thread_Semaphore.  Thanks to Bala and Don Hinton for
 	  reporting these problems.

Mon Dec 15 10:11:31 2003  Chad Elliott  <elliott_c@ociweb.com>

        * tests/NonBlocking_Conn_Test.h:
        * tests/NonBlocking_Conn_Test.cpp:

          Moved the template class Svc_Handler into a header file so that
          Visual Age C++ could implicitly instantiate the template.

        * tests/Message_Queue_Notifications_Test.cpp:
        * tests/Process_Strategy_Test.cpp:
        * tests/Reactor_Registration_Test.cpp:
        * tests/Reactors_Test.cpp:
        * tests/Recursive_Mutex_Test.cpp:
        * tests/Reference_Counted_Event_Handler_Test.cpp:
        * tests/Svc_Handler_Test.cpp:
        * tests/TP_Reactor_Test.h:

          Added various #include's to get the tests to build on AIX with
          Visual Age C++ 5.0.

Mon Dec 15 10:06:17 2003  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_stdio.cpp (gets): Reverted this change:
          Thu Dec 11 18:13:29 2003  Steve Huston  <shuston@riverace.com>
          It broke the Borland build and wasn't a very good fix for the
          AIX situation either. Since Riverace is dropping AIX 4.3 support
          at ACE 5.4, I'm not going to push this issue. It appears to be a
          compiler issue with Visual Age C++ version 5.

Mon Dec 15 07:29:27 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:
