@@ -1,3 +1,13 @@
+Mon Dec 15 20:34:31 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tests/MM_Shared_Memory_Test.cpp:
+	* tests/Reactor_Notify_Test.cpp:
+	* tests/Semaphore_Test.cpp:
+	* tests/TP_Reactor_Test.cpp:
+
+	  More fixes like "Mon Dec 15 11:09:45 2003  Douglas C. Schmidt
+	  <schmidt@ace.cs.wustl.edu>". Thanks to Don for motivating this.
+
 Mon Dec 15 18:51:15 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>
 
 	* bin/MakeProjectCreator/templates/gnu.mpd:
